--- a/assignment-11.tex
+++ b/assignment-11.tex
@@ -1,4 +1,4 @@
-% Created 2015-03-14 Sat 17:47
+% Created 2015-03-14 Sat 18:00
 \documentclass[11pt]{article}
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
@@ -128,6 +128,7 @@ Now, to the inductive step (for $n>1$), some useful simplification first:
     {2n \choose n} &= \frac{(2n)!}{n!(2n - n)!} \\
     &= \frac{(2n!)}{n!n!}. \\
   \end{aligned}
+  \label{eq:base}
 \end{equation}
 
 Invoking inductive hypothesis ${2(n+1) \choose (n+1)} \geq \frac{4^n}{2n}$:
@@ -138,9 +139,10 @@ Invoking inductive hypothesis ${2(n+1) \choose (n+1)} \geq \frac{4^n}{2n}$:
     &= \frac{(2n!)(2n+1)2(n+1)}{n!(n+1)n!(n+1)} \\
     &= \frac{(2n!)(2n+1)2}{n!n!(n+1)}.
   \end{aligned}
+  \label{eq:step}
 \end{equation}
 
-Dividing (2) by (1) gives us the factor $\frac{(2n+1)2}{(n+1)}$. Thus:
+Dividing $\ref{eq:step}$ by $\ref{eq:base}$ gives us the factor $\frac{(2n+1)2}{(n+1)}$. Thus:
 \begin{align*}
   \frac{(2n+1)2}{n+1} \times \frac{4^n}{2n} &\geq \frac{4^{n+1}}{2(n+1)} \\
   \frac{(2n+1)2*4^n}{2n(n+1)} &\geq \frac{4^{n+1}}{2(n+1)} \\
