--- a/assignment-11.org
+++ b/assignment-11.org
@@ -449,7 +449,58 @@
    #+END_SRC
    
 *** Answer 11
-    Solving...
+    *Discussion:* First, observer that flooring on the left side guarantees
+    that $x$ is an integer.  Having said that, we can drop the flooring operation
+    altogether.  The solution will examine three cases of $x < 0$, $x = 0$ and
+    $x > 0$ warranted by the first axiom of order.
+
+    *Case* $x=0$: 
+    #+HEADER: :exports results
+    #+HEADER: :results (by-backend (pdf "latex") (t "raw"))
+    #+BEGIN_SRC latex
+      \begin{equation*}
+        \begin{aligned}
+          \abs{x+1}-\abs{x-1}-x &= 0 \\
+          0 + 1 - 0 - 1 - 0     &= 0 \\
+          0                     &= 0
+        \end{aligned}
+      \end{equation*}
+    #+END_SRC
+    Substituting 0 back into original formula proves to give a correct identity.
+
+    *Case* $x>0$:
+    #+HEADER: :exports results
+    #+HEADER: :results (by-backend (pdf "latex") (t "raw"))
+    #+BEGIN_SRC latex
+      \begin{equation*}
+        \begin{aligned}
+          \abs{x + 1} - \abs{x - 1} - x &= 0 \\
+          x + 1 - \abs{x - 1} - x       &= 0 \\
+          1 - \abs{x - 1}               &= 0 \\
+          1 - x + 1                     &= 0 \\
+          x                             &= 2
+        \end{aligned}
+      \end{equation*}
+    #+END_SRC
+    Substituting 2 back into equation gives $\abs{2+1}-\abs{2-1}=3-1=2$, this
+    we obtained additional solution.
+
+    *Case* $x<0$:
+    #+HEADER: :exports results
+    #+HEADER: :results (by-backend (pdf "latex") (t "raw"))
+    #+BEGIN_SRC latex
+      \begin{equation*}
+        \begin{aligned}
+          \abs{x + 1} - \abs{x - 1} - x &= 0 \\
+          x + 1 - \abs{x - 1} - x       &= 0 \\
+          1 - \abs{x - 1}               &= 0 \\
+          1 - x + 1                     &= 0 \\
+          x                             &= 2
+        \end{aligned}
+      \end{equation*}
+    #+END_SRC
+    But we started with the assumpion that $x<0$, thus there are no solutions
+    for $x<0$.  Hence the only solutions are 0 and 2.
 
 ** Problem 6
    *Definition:* set $A$ of real numbers is called *dense in interval* $I$ if
