Fixed some typos.

--- a/assignment-11.tex
+++ b/assignment-11.tex
@@ -1,4 +1,4 @@
-% Created 2015-03-20 Fri 20:40
+% Created 2015-03-20 Fri 20:44
 \documentclass[11pt]{article}
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
@@ -405,7 +405,7 @@ Solve the equation:
 
 \subsubsection{Answer 11}
 \label{sec-1-5-1}
-\textbf{Discussion:} First, observer that flooring on the left side guarantees
+\textbf{Discussion:} First, observe that flooring on the left side guarantees
 that $x$ is an integer.  Having said that, we can drop the flooring operation
 altogether.  The solution will examine three cases of $x < 0$, $x = 0$ and
 $x > 0$ warranted by the first axiom of order.
@@ -419,7 +419,8 @@ $x > 0$ warranted by the first axiom of order.
   \end{aligned}
 \end{equation*}
 
-Substituting 0 back into original formula proves to give a correct identity.
+Substituting 0 back into original formula proves to give a correct identity:
+$\abs{0+1}-\abs{0-1}-0=1-1+0=0$.
 
 \textbf{Case} $x>0$:
 \begin{equation*}
@@ -432,7 +433,7 @@ Substituting 0 back into original formula proves to give a correct identity.
   \end{aligned}
 \end{equation*}
 
-Substituting 2 back into equation gives $\abs{2+1}-\abs{2-1}=3-1=2$, this
+Substituting 2 back into equation gives $\abs{2+1}-\abs{2-1}=3-1=2$, thus
 we obtained additional solution.
 
 \textbf{Case} $x<0$:
