--- a/assignment-11.org
+++ b/assignment-11.org
@@ -449,7 +449,7 @@
    #+END_SRC
    
 *** Answer 11
-    *Discussion:* First, observer that flooring on the left side guarantees
+    *Discussion:* First, observe that flooring on the left side guarantees
     that $x$ is an integer.  Having said that, we can drop the flooring operation
     altogether.  The solution will examine three cases of $x < 0$, $x = 0$ and
     $x > 0$ warranted by the first axiom of order.
@@ -466,7 +466,8 @@
         \end{aligned}
       \end{equation*}
     #+END_SRC
-    Substituting 0 back into original formula proves to give a correct identity.
+    Substituting 0 back into original formula proves to give a correct identity:
+    $\abs{0+1}-\abs{0-1}-0=1-1+0=0$.
 
     *Case* $x>0$:
     #+HEADER: :exports results
@@ -482,7 +483,7 @@
         \end{aligned}
       \end{equation*}
     #+END_SRC
-    Substituting 2 back into equation gives $\abs{2+1}-\abs{2-1}=3-1=2$, this
+    Substituting 2 back into equation gives $\abs{2+1}-\abs{2-1}=3-1=2$, thus
     we obtained additional solution.
 
     *Case* $x<0$:
