--- a/assignment-12.tex
+++ b/assignment-12.tex
@@ -1,4 +1,4 @@
-% Created 2015-04-04 Sat 00:37
+% Created 2015-04-16 Thu 09:17
 \documentclass[11pt]{article}
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
@@ -223,8 +223,10 @@ Now, recall that $\lim_{n \to \infty} \sqrt{1 + \frac{a}{n}} = 1$, this gives us
 \end{equation*}
 \subsubsection{Answer 7}
 \label{sec-1-2-3}
-
-
+I know that this expression tends to negative infinity as $n$ tends to infinity
+simply because the numerator has a power of $n$ greater than the denominator and
+the greatest term in the denominator is negative.  But I couldn't find a way
+to prove this formally.
 \subsubsection{Answer 8}
 \label{sec-1-2-4}
 I will show that the given sequence tentds to infinity.  Some notation first.
@@ -263,5 +265,103 @@ Now, plug this back into our formula:
 
 The last step is allowed becasue for all harmonic numbers greater than one
 it holds that $n > H_{n+1}$.
+\subsection{Problem 3}
+\label{sec-1-3}
+Let $(a_n)$ be a sequence such that $\lim_{n \to \infty}(a_{n+1} - a_n) = 0$.
+\begin{enumerate}
+\item Prove that if there exists a constant $c > 0$ s.t. for all $n$ 
+$\abs{a_n}\geq c$, then almost all elements of the sequence are either
+negative or positive.
+\item Show that the same doesn't hold for $\abs{a_n} > 0$.
+\item Show that if for all $n$ it holds that $\abs{a_n} \geq n$, then $(a_n)$
+converges in a general sense.
+\end{enumerate}
+
+\subsubsection{Answer 9}
+\label{sec-1-3-1}
+First, observe that the definition gives us a Cauchy sequence.  Recall that
+Cauchy sequence is a sequence where intervals between subseqent members tend
+to zero as $n$ tends to infinity.  That said, from the definition of the
+limit, we can find $\epsilon < c$, such that almost all members of the
+sequence would be in the vicinity of $c$ no farther away than
+$\epsilon$. Thus, the sequence would converge to either a negative number or
+a positive number, but not zero.  Since almost all members of a sequence can
+be showed to be in a vicinity of a number other than zero, we have proved
+the claim.
+\subsubsection{Answer 10}
+\label{sec-1-3-2}
+The example $(a_n)$ such that doesn't match the requirement from the previous
+question is, for example, $a_n = \frac{(-1)^n}{2n}$.  I.e. an alternating
+series where even members are positive and odd members are negative.  The
+general form of $a_{n+1} - a_n$ will thus look like this:
+\begin{equation*}
+  \lim_{n \to \infty}\Big(\frac{(-1)^{n+1}-2(-1)^n}{2n}\Big) = 0.
+\end{equation*}
+
+
+It's easy to see that this limit is zero: the nominator is a constant term
+because one raised to any power is either one or negative one, while
+denominator is growing with $n$.  It is also easy to see that this is
+an alternating series, i.e. the sign alters with parity of $n$.
+\subsubsection{Answer 11}
+\label{sec-1-3-3}
+Recall \ref{sec-1-3-1}, where we used the fact that $(a_n)$ is described as a
+Cauchy sequence.  This is enough to show that this sequence converges in
+a general sense, whether the equation $\abs{a_n} \geq n$ holds or not
+is inconsequential.  Perhaps it's worth saying that the above requirement
+makes it explicit that the sequence converges to infinity if any of its
+members is positive, and negative infinity otherwise.
+\subsection{Problem 4}
+\label{sec-1-4}
+Given sequences $(a_n)$ and $(b_n)$ s.t. $\lim_{n \to \infty}(a_nb_n) = 0$,
+prove or disprove the following:
+
+\begin{enumerate}
+\item Either $\lim_{n \to \infty}a_n = 0$ or $\lim_{n \to \infty}b_n = 0$.
+\item If $\lim_{n \to \infty}b_n = 1$, then there exists $N > 0$ s.t.
+      $a_n < \frac{1}{2}$ for all $n > N$.
+\item If $\lim_{n \to \infty}b_n = 1$, then $\lim_{n \to \infty}a_n = 0$.
+\item If almost all members of $(b_n)$ are positive, then 
+      $\lim_{n \to \infty}a_n \neq \infty$.
+\item If almost all members of $(b_n)$ are positive, then 
+      $\lim_{n \to \infty}a_n = 0$.
+\item If there exists a constant $c > 0$ s.t. almost all $b_n \geq c$, then
+      $\lim_{n \to \infty}a_n = 0$.
+\end{enumerate}
+
+\subsubsection{Answer 12}
+\label{sec-1-4-1}
+The limit of a product is a product of limits (their existence is
+provisional).  This gives us an equation in two unknowns: $ab = 0$.
+From this equation follows that either $a$ or $b$ must be zero
+Thus the claim is true.
+\subsubsection{Answer 13}
+\label{sec-1-4-2}
+As shown in \ref{sec-1-4-1}, either one (or both) limits must be zero,
+thus if $\lim_{n \to \infty}a_n$ must be zero.  From definition of
+the limit, there must be an $\epsilon$, such that for any $N$, almost
+all $\abs{a_n - L} < \epsilon$, for $n > N$.  We can choose
+$\epsilon = \frac{1}{2}$, since $L$ (the limit of $(a_n)$) is zero
+the inequality becomes $\abs{a_n} < \frac{1}{2}$ since
+$a_n \leq \abs{a_n} < \frac{1}{2}$ the claim is true.
+\subsubsection{Answer 14}
+\label{sec-1-4-3}
+The claim is true. This is simply a corollary of \ref{sec-1-4-1}.
+\subsubsection{Answer 16}
+\label{sec-1-4-4}
+This is not true.  Put $b_n = \frac{1}{n}$, the limit of $(b_n)$ is 0.  Even
+if $(a_n)$ is a divergent series, for example, $a_n = \sqrt{n}$ the limit of
+a product is still zero.
+\subsubsection{Answer 17}
+\label{sec-1-4-5}
+Same example as \ref{sec-1-4-4}.  Limit of $(a_n)$ isn't zero and yet the
+requirement is satisfied, thus the claim is false.
+\subsubsection{Answer 18}
+\label{sec-1-4-6}
+Existence of lower bound greater than zero precludes $(b_n)$ from having
+zero as its limit.  Assuming that there are members of a sequence which
+are smaller than the lower bound is in direct contradiction with the
+bound definition.  Thus the limit of $(a_n)$ must be zero (follows from
+what we proved in \ref{sec-1-4-1}).  Thus the claim is true.
 % Emacs 25.0.50.1 (Org mode 8.2.2)
 \end{document}
