--- a/assignment-13.tex
+++ b/assignment-13.tex
@@ -1,4 +1,4 @@
-% Created 2015-04-24 Fri 17:33
+% Created 2015-05-04 Mon 22:46
 \documentclass[11pt]{article}
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
@@ -18,7 +18,6 @@
 \tolerance=1000
 \usepackage[utf8]{inputenc}
 \usepackage[usenames,dvipsnames]{color}
-\usepackage[backend=bibtex, style=numeric]{biblatex}
 \usepackage{commath}
 \usepackage{tikz}
 \usetikzlibrary{shapes,backgrounds}
@@ -28,7 +27,6 @@
 \usepackage{enumerate}
 \hypersetup{urlcolor=blue}
 \hypersetup{colorlinks,urlcolor=blue}
-\addbibresource{bibliography.bib}
 \setlength{\parskip}{16pt plus 2pt minus 2pt}
 \definecolor{codebg}{rgb}{0.96,0.99,0.8}
 \definecolor{codestr}{rgb}{0.46,0.09,0.2}
@@ -215,7 +213,18 @@ given in (1).
 
 \subsubsection{Answer 7}
 \label{sec-1-3-1}
-
+Suppose, for contradiction, that there is some such sequences $(a_n)$ and
+$(b_n)$, for which $\sup \{a_n + b_n | n \in \mathbb{N}\} > \sup \{a_n | n
+    \in \mathbb{N}\} + \sup \{b_n | n \in \mathbb{N}\}$.  But we know that every
+element of $(a_n)$ is at least as large as $\sup (a_n)$, and the same is
+true of $(b_n)$.  Let's call the supremum of the sum of the sequences $s_1$,
+the supremum of $(a_n)$---$s_2$ and the supremum of $(b_n)$--- $s_3$.
+Since $s_1 > s_2 + s_3$, either $(a_n)$ or $(b_n)$ must contain an element
+which is as large as $s_2 + s_1 - s_2$ (and similarly for $(b_n)$.)  But
+this is a contradiction, since $s_2$ is the largest element of $(a_n)$
+(and similarly for $(b_n)$.)  Hence, the initial assumption is false, hence
+the supremum of the element-wise sum of two sequences cannot be greater than
+the sum of the suprema of these sequences.
 \subsubsection{Answer 8}
 \label{sec-1-3-2}
 An example of $(a_n) = \frac{1}{n}$ whose supremum is 1 and $(b_n) =
@@ -244,12 +253,70 @@ that $n < \sqrt{n^2 + \ell} < n + 1$.
 
 \subsubsection{Answer 10}
 \label{sec-1-4-1}
-
+I will claim that the lower bound on this sequence is 0.  The term
+$\lfloor \sqrt{n} \rfloor^2$  can be either equal to $n$ (when $n$ is
+a perfect sqare), or it can be smaller than $n$.  Assume, for contradiction,
+that $\lfloor \sqrt{n} \rfloor^2 > n$, then it gives
+$\lfloor \sqrt{n} \rfloor > \sqrt{n}$, but since $n$ is positive, this is
+impossible.  Hence contradiction.  Hence, the original claim stands.
 \subsubsection{Answer 11}
 \label{sec-1-4-2}
-
+We can choose the subsequence of $(a_n)$ such that it consists only
+of the perfect squares.  In which case the $\lim_{m \to \infty}(a_m) = 0$
+because $m = n * n$, and subsequently $m = \lfloor \sqrt{m} \rfloor^2$.
 \subsubsection{Answer 12}
 \label{sec-1-4-3}
+Following the argument similar to \ref{sec-1-4-1}, the greatest lower bound on
+$(a_n)$ is 0.  Assume there was some positive $x$, a candidate for a greater
+lower bound, then $n - \lfloor \sqrt{n} \rfloor^2 > x$.  Let's try $n = 1$
+to show the contradiction.  Substituting $n = 1$ gives $0 > x$, but we
+assumed $x > 0$.  Hence, contradiction, hence the sequence has greates
+lower bound at zero.
+\subsubsection{Answer 13}
+\label{sec-1-4-4}
+Through some algebraic transformations we arrive at:
+\begin{flalign*}
+  &n < \sqrt{n^2 + \ell} < n + 1 \\
+  &n^2 < n^2 + \ell < n^2 + 2n + 1 \\
+  &\textit{First inequality is obviously true for $\ell > 0$} \\
+  &n^2 + \ell < n^2 + 2n + 1 \\
+  &\ell < 2n + 1 \\
+  &\textit{Second inequality is true for $\ell < 2n + 1$}.
+\end{flalign*}
+
+Thus the left side of inequality holds for $\ell > 0$ and the right
+side holds for $\ell < 2n + 1$.  Since $\ell$ is a constant, and $n$
+can be made as large as desired, the inequality holds for almost all $n$.
+\subsubsection{Answer 14}
+\label{sec-1-4-5}
+Pick a natural number $x$, without loss of generality we assume:
+$\lim_{m \to \infty}(a_m) = x$, where $m$ is somehow choosen from the
+set of all values of $n$.  We can define a selection rule to be
+``whenever $n + x$ is a perfect square'', since there are infinitely
+many perfect squares, and there isn't a largest perfect square, $x$
+can be any number.
+\subsubsection{Anser 15}
+\label{sec-1-4-6}
+No, $(a_n)$ doesn't have a supermum.  Assume it had one, let's say $N$, then
+for all $n - \lfloor \sqrt{n} \rfloor^2 < N$.  But we could think of $m =
+    N^2 - 1$, which if we substitute back into our original formula:
+\begin{flalign*}
+  &m - \lfloor \sqrt{m} \rfloor^2 < N \\
+  &N^2 - 1 - \lfloor \sqrt{N^2 - 1} \rfloor^2 < N \\
+  &N^2 - 1 - \sqrt{(N - 1)^2}^2 < N \\
+  &\textit{$N^2 - 1$ cannot be a perfect square} \\
+  &N^2 - 1 - (N - 1)^2 < N \\
+  &N^2 - 1 - N^2 + 2N - 1 < N \\
+  &2N - 2 < N.
+\end{flalign*}
+
+Which is a contradiction (because $N$ must be greater than 2).  Hence no
+supremum exists.
+\subsubsection{Answer 16}
+\label{sec-1-4-7}
+Since we just showed that $(a_n)$ diverges, the $\limsup_{n \to \infty}(a_n)$
+doesn't exist in the narrow sense of the word, or is equal to $\infty$ in a
+more general sense.
 \subsection{Problem 5}
 \label{sec-1-5}
 Let $(a_n)$ and $(b_n)$ be sequences.
@@ -262,5 +329,28 @@ limit point of $(b_n)$.
 \item Assume $(a_n)$ has 20106 limit points and $(b_n)$ has 20474 limit
 points. Prove that $(a_n + b_n)$ diverges.
 \end{enumerate}
+
+\subsubsection{Answer 17}
+\label{sec-1-5-1}
+Assume, for contradiction, $(b_n)$ is unbounded, then $\lim_{n \to
+    \infty}(b_n)$ is either $\infty$ or $-\infty$, but from the addition
+rules involving infinity we know that $\infty + L = \infty$ and
+$L - \infty = -\infty$, but we are given that the sequence converges,
+hence contradiction.  Hence $(b_n)$ must be bounded.
+\subsubsection{Answer 18}
+\label{sec-1-5-2}
+Since the sequence of sum converges, each one of its subsequences converges
+to the same limit.  Hence both $(a_n)$ and $(b_n)$ have defined limits.  We
+can use the limit sum law to show that $\lim_{n \to \infty}(a_n + b_n) =
+    \lim_{n \to \infty}(a_n) + \lim_{n \to \infty}(b_n) = L$.  Since we are
+given $\lim_{n \to \infty}(a_n) = a$, it follows that $\lim_{n \to
+    \infty}(b_n) = L - a$, which completes the proof.
+\subsubsection{Answer 19}
+\label{sec-1-5-3}
+By pigeonhole principle, there must be a limit point exclusive to $(b_n)$.
+Existence of this limit point would violate what we proved in \ref{sec-1-5-1}.
+Since the statement in previous answer is a biconditional, then, in
+particular, it follows that sequence $(a_n + b_n)$ diverges (has no finite
+limit).
 % Emacs 25.0.50.1 (Org mode 8.2.2)
 \end{document}
